--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -41,6 +41,18 @@
       "css": "mail-squared",
       "code": 38,
       "src": "fontawesome"
+    },
+    {
+      "uid": "1145676a91138011729fa2909997af66",
+      "css": "linkedin-squared",
+      "code": 39,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "e9107949dd6c9e8ab2b29ae07156e38c",
+      "css": "linkedin",
+      "code": 40,
+      "src": "fontawesome"
     }
   ]
 }
